[package]
name = "cargo-config2"
version = "0.1.15"
edition = "2021"
rust-version = "1.67"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/cargo-config2"
keywords = ["cargo", "config"]
categories = []
exclude = ["/.*", "/tools"]
description = """
Load and resolve Cargo configuration.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.cargo_check_external_types]
# The following are external types that are allowed to be exposed in our public API.
allowed_external_types = [
    "serde::*",
]

[workspace]
resolver = "2"
members = ["bench", "tools/codegen"]

[lib]
doc-scrape-examples = false

# Note: serde is public dependencies.
[dependencies]
home = "0.5"
once_cell = { version = "1", default-features = false }
serde = "1.0.165"
serde_derive = "1.0.165"
toml_edit = { version = "0.20", features = ["serde"] }

[dev-dependencies]
anyhow = "1"
build-context = "0.1"
clap = { version = "4", default-features = false, features = ["std", "derive"] }
duct = "0.13"
fs-err = "2"
lexopt = "0.3"
rustversion = "1"
serde_json = "1"
shell-escape = "0.1"
similar-asserts = "1"
static_assertions = "1"
tempfile = "3"
toml = "0.8"
