[package]
name = "bench"
edition = "2021"

[dev-dependencies]
cargo-config2 = { path = ".." }

criterion = { default-features = false, git = "https://github.com/taiki-e/criterion.rs.git", rev = "8617cd7a85d3dd5953f95f5b969e2b3442952a6f" } # reduce deps

[[bench]]
name = "bench"
path = "bench.rs"
harness = false

[lints]
workspace = true
